# cef_tools

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  browser.cpp  browser.h  dom.cpp  dom.h  dom_event.cpp  dom_event.h  ipc.cpp  ipc.h  ipc_types.h  main.cpp  mycef.patch  offscreen.cpp  offscreen.h  prj1.cpp  proc_browser.cpp  proc_browser.h  screenshotter.cpp  screenshotter.h  search.cpp  search.h  string_utils.cpp  string_utils.h  task.h  task1.cpp  task1.h  xpath.cpp  xpath.h
cmake/: FindCEF.cmake
doc/: build.txt
tests/: CMakeLists.txt  ipc_test.cpp  xpath_test.cpp
tests/data/: CU3OX - DEMO Page.html
tests/data/CU3OX - DEMO Page_files/: custom.css  layout.css  style_002.css
tests/gtest/: CMakeLists.txt
